Remove api key and email login info

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,8 +8,8 @@
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
     "MailPort": 587,
-    "Username": "ckenley941@gmail.com",
-    "Password": "Bonnaroo08",
+    "Username": "",
+    "Password": "",
     "DeliveryMethod": "Network",
     "Timeout": 30000,
     "UseDefaultCredentials": false,
